# zenml-class-pipeline

./: README.md  pyproject.toml
data/: iris_preprocessed.csv  predictions.csv  to_predict.csv
models/: iris_model.h5  iris_model.keras
src/: config.py  main.py  preprocess.py  preprocess_v2.py  train.py  transform.py
