[tool.poetry]
name = "zenml-class-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.7"
pydantic = "^2.8.2"
loguru = "^0.7.2"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
pydantic-settings = "^2.4.0"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
